example/lib/src/arbs/errors/app_fr.arb
{
  "@@locale": "fr",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Une erreur est survenue",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Une erreur inattendue s'est produite",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Rapport de bug envoyé avec succès.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}